# clockify-cli

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
src/: cli.py  clockify.py  constants.py  environment.py  lib_types.py  methods.py  password.py
